--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production",
     "start": "webpack-dev-server --open "
   },
   "dependencies": {
