--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "set NODE_OPTIONS=\"--max_old_space_size=8192 --openssl-legacy-provider\" && webpack --mode production",
+    "build": "set NODE_OPTIONS=--max_old_space_size=8192 && webpack --mode production",
     "start": "webpack-dev-server --open "
   },
   "dependencies": {
