--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 webpack",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 && webpack --mode production",
     "start": "webpack-dev-server --open "
   },
   "dependencies": {
